Added documentation for Customer
